implement groups#new

--- a/test/fixtures/groups.yml
+++ b/test/fixtures/groups.yml
@@ -2,8 +2,8 @@
 
 one:
   title: MyString
-  descrition: MyText
+  description: MyText
 
 two:
   title: MyString
-  descrition: MyText
+  description: MyText
